# aichitect

./: Cargo.toml  README.md  config.example.toml
.abacusai/: config.json
src/: main.rs  revision_context.rs  watcher.rs
src/config/: mod.rs
src/document/: highlight.rs  mod.rs  patch.rs
src/history/: mod.rs
src/openai/: client.rs  mod.rs  prompts.rs  session.rs
src/remarks/: mod.rs
src/review/: mod.rs
src/tui/: app.rs  events.rs  input.rs  mod.rs  ui.rs
