[package]
name = "aichitect"
version = "0.1.0"
edition = "2021"
description = "Terminal-first AI document iteration tool"
license = "MIT"

[[bin]]
name = "aichitect"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
pulldown-cmark = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
